# libmocap

./: .travis.yml  CMakeLists.txt  README.md
doc/: .gitignore  copyright-header  design.mp  design.tex
include/libmocap/: abstract-marker.hh  abstract-virtual-marker.hh  color.hh  link.hh  marker-set-factory.hh  marker-set.hh  marker-trajectory-factory.hh  marker-trajectory.hh  marker.hh  pose.hh  segment.hh  util.hh  virtual-marker-measured.hh  virtual-marker-one-point-measured.hh  virtual-marker-ratio.hh  virtual-marker-relative-to-bone.hh  virtual-marker-three-points-measured.hh  virtual-marker-three-points-ratio.hh  virtual-marker-two-points-measured.hh  virtual-marker-two-points-ratio.hh
src/: CMakeLists.txt  abstract-marker.cc  abstract-virtual-marker.cc  color.cc  link.cc  marker-set-factory.cc  marker-set.cc  marker-trajectory-factory.cc  marker-trajectory.cc  marker.cc  mars-marker-set-factory.cc  mars-marker-set-factory.hh  math.cc  math.hh  pose.cc  segment.cc  string.cc  string.hh  trc-marker-trajectory-factory.cc  trc-marker-trajectory-factory.hh  virtual-marker-measured.cc  virtual-marker-one-point-measured.cc  virtual-marker-ratio.cc  virtual-marker-three-points-measured.cc  virtual-marker-three-points-ratio.cc  virtual-marker-two-points-measured.cc  virtual-marker-two-points-ratio.cc
src/ros-viewer/: CMakeLists.txt  marker-set-link-view.cc  marker-set-link-view.hh  marker-set-name-view.cc  marker-set-name-view.hh  marker-set-segment-view.cc  marker-set-segment-view.hh  marker-trajectory-view.cc  marker-trajectory-view.hh  ros-viewer.cc  view.cc  view.hh
tests/: CMakeLists.txt  marker-set-factory.cc  marker-trajectory-factory.cc
tests/data/: box.mars  box.trc  human.mars
